--- a/css/article.css
+++ b/css/article.css
@@ -4,7 +4,7 @@
 	padding-top: 60px;
 }
 
-.article__figure {
+.article__figure:not(:last-child){
 	margin-bottom: 30px;
 }
 
@@ -20,7 +20,7 @@
 	margin: 0 auto 30px auto;
 }
 
-.aricle__visualbox {
+.article__visualbox {
 	max-width: 500px;
 	margin: 0 auto;
 }
@@ -44,9 +44,11 @@
 	color: #000000;
 }
 
-.article__text--font--light {
+.article__fontlight {
 	color: #5E5E5E;
 	padding-top: 15px;
+	padding-bottom: 15px;
+	padding-left: 30px;
 }
 
 
@@ -59,18 +61,19 @@
 	line-height: 120%;
 	color: #000000;
 	display: inline-block;
-	max-width: 480px;
+	max-width: 490px;
 }
 
-.article__text--margin--bottom {
-	margin-bottom: 30px;
+.article__text--padding--top {
+	padding-top: 30px;
+	
 }
 
 .article__paragraph:not(:last-child) {
 	margin-bottom: 30px;
 }
 
-.contentbox__img {
+.article__img {
 	float: left;
 	margin-right: 30px;
 }
@@ -88,11 +91,11 @@
 	margin-bottom: 30px;
 }
 
-.contentbox__text--float--left {
+.article__maintext--float--left {
 	 float: left; 
 }
 
-.contentbox__img--float--right {
+.article__img--float--right {
 	float: right;
 }
 
@@ -101,10 +104,10 @@
 	clear: both;
 }
 
-.figure__image {
+.article__image {
 	object-fit: cover;
 	min-height: 537px;
-	margin-bottom: 30px;
+	/* margin-bottom: 30px; */
 }
 
 
@@ -128,12 +131,21 @@
 	margin-right: auto;
 }
 
-.container__technic {
+
+.navigation__container {
 	padding-top: 25px;
 	padding-left: 45px;
 	background: #F1F1F1;
 	border-radius: 10px;
-	min-height: 385px;
+	padding-bottom: 25px;
+}
+
+.article__footercontainer {
+	padding-top: 25px;
+	padding-left: 45px;
+	background: #F1F1F1;
+	border-radius: 10px;
+	padding-bottom: 25px;
 }
 
 .article__item:not(:last-child) {
@@ -141,5 +153,37 @@
 }
 
 .article__list {
+	margin-bottom: 30px;
+	
+}
+
+.modify--font--bold {
+	font-weight: 700;
+	line-height: 120%;
+	color: #000000;
+}
+
+.modify--font--italic {
+	font-style: italic;
+	font-weight: 400;
+	line-height: 120%;
+	color: #000000;
+}
+
+.article__paragraph--width--short {
+	max-width: 480px;
+}
+
+.article__figure--border--solid {
+	
+	border: 1px solid #000000;
+
+}
+
+.article__center {
+	margin-bottom: 30px;
+}
+
+.wrapper--margin--bottom {
 	margin-bottom: 30px;
 }
