--- a/css/global.css
+++ b/css/global.css
@@ -77,18 +77,8 @@ section {
 	padding: 0px 30px;
 }
 
-.container__tech {
+.article__container {
 	padding-bottom: 25px;
-}
-
-.container__gray {
-background: #F1F1F1;
-border-radius: 10px;
-min-height: 215px;
-
-padding-top: 25px;
-padding-left: 45px;
-
 }
 
 
